--- a/package.json
+++ b/package.json
@@ -1,50 +1,28 @@
 {
-  "name": "secureshare",
+  "name": "secureshare-app",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "deploy": "next build && firebase deploy",
-    "reset:all": "node scripts/resetAll.js",
-    "deploy:indexes": "node scripts/deploy-indexes.js",
-    "check:indexes": "node scripts/check-indexes.js",
-    "setup:vercel": "node scripts/setup-vercel-env.js"
+    "lint": "next lint"
   },
   "dependencies": {
-    "@firebase/auth": "^1.7.0",
-    "@firebase/firestore": "^4.4.0",
-    "@firebase/storage": "^0.12.0",
-    "@fortawesome/fontawesome-svg-core": "^7.0.0",
-    "@fortawesome/free-brands-svg-icons": "^7.0.0",
-    "@fortawesome/free-solid-svg-icons": "^7.0.0",
-    "@fortawesome/react-fontawesome": "^0.2.3",
-    "autoprefixer": "^10.4.16",
-    "firebase": "^9.23.0",
-    "formidable": "^3.5.4",
-    "googleapis": "^156.0.0",
-    "next": "^15.4.6",
-    "nodemailer": "^7.0.5",
-    "postcss": "^8.4.32",
-    "qrcode.react": "^4.2.0",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "@aws-sdk/client-s3": "3.374.0",
+    "@aws-sdk/protocol-http": "3.374.0",
+    "@aws-sdk/s3-request-presigner": "3.374.0",
+    "@clerk/nextjs": "^6.31.6",
+    "@fortawesome/fontawesome-free": "6.4.2",
+    "@smithy/hash-node": "2.0.14",
+    "dotenv": "16.3.1",
+    "next": "^15.5.2",
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "@testing-library/dom": "^10.4.1",
-    "@testing-library/jest-dom": "^6.1.3",
-    "@testing-library/react": "^16.3.0",
-    "@types/node": "^20.10.4",
-    "@types/react": "^18.2.42",
-    "eslint": "^9.33.0",
-    "eslint-config-next": "^15.4.6",
-    "firebase-admin": "^12.7.0",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
-    "tailwindcss": "^3.3.6"
+    "autoprefixer": "^10.4.18",
+    "postcss": "^8.4.35",
+    "tailwindcss": "^3.4.1"
   }
 }
