--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test:r2": "node scripts/test-r2-config.js"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "3.374.0",
@@ -15,6 +16,7 @@
     "@clerk/nextjs": "^6.31.6",
     "@fortawesome/fontawesome-free": "6.4.2",
     "@smithy/hash-node": "2.0.14",
+    "cloudinary": "^2.7.0",
     "dotenv": "16.3.1",
     "next": "^15.5.2",
     "react": "18.2.0",
