--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,23 @@
-# Dependencies
+# Node.js dependencies
 node_modules/
+
+# Logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
+logs
+*.log
 
-# Next.js
+# Next.js build output
 .next/
 out/
 build/
 dist/
+
+# Static build output
+public/
 
 # Environment variables
 .env
@@ -20,7 +27,7 @@ dist/
 .env.production.local
 .env*.local
 
-# Vercel
+# Vercel deployment
 .vercel
 
 # TypeScript
@@ -31,58 +38,29 @@ next-env.d.ts
 coverage/
 .nyc_output/
 .jest/
-
-# Logs
-logs
-*.log
-
-# Runtime data
-pids
-*.pid
-*.seed
-*.pid.lock
-
-# Coverage directory used by tools like istanbul
-coverage/
 *.lcov
 
-# nyc test coverage
-.nyc_output
-
-# Grunt intermediate storage (https://gruntjs.com/creating-plugins#storing-task-files)
+# Grunt, Bower, and other build tools
 .grunt
-
-# Bower dependency directory (https://bower.io/)
 bower_components
-
-# node-waf configuration
 .lock-wscript
 
-# Compiled binary addons (https://nodejs.org/api/addons.html)
+# Compiled binary addons
 build/Release
 
 # Dependency directories
 jspm_packages/
 
-# TypeScript cache
-*.tsbuildinfo
-
-# Optional npm cache directory
+# Optional caches
 .npm
-
-# Optional eslint cache
 .eslintcache
-
-# Optional stylelint cache
 .stylelintcache
-
-# Microbundle cache
 .rpt2_cache/
 .rts2_cache_cjs/
 .rts2_cache_es/
 .rts2_cache_umd/
 
-# Optional REPL history
+# REPL history
 .node_repl_history
 
 # Output of 'npm pack'
@@ -91,29 +69,26 @@ jspm_packages/
 # Yarn Integrity file
 .yarn-integrity
 
-# dotenv environment variables file
+# dotenv test file
 .env.test
 
-# parcel-bundler cache (https://parceljs.org/)
+# Parcel cache
 .cache
 .parcel-cache
 
-# Next.js build output
-.next
-
-# Nuxt.js build / generate output
+# Nuxt.js
 .nuxt
 dist
 
-# Gatsby files
+# Gatsby
 .cache/
-public
 
-# Storybook build outputs
+# Storybook
 .out
 .storybook-out
 
 # Temporary folders
+.tmp/
 tmp/
 temp/
 
@@ -132,10 +107,6 @@ temp/
 .Trashes
 ehthumbs.db
 Thumbs.db
-
-# Windows
-Thumbs.db
-ehthumbs.db
 Desktop.ini
 $RECYCLE.BIN/
 *.cab
@@ -173,15 +144,13 @@ Temporary Items
 # SASS cache
 .sass-cache/
 
-# Cloudinary (if storing credentials locally)
+# Cloudinary/Clerk config (if storing locally)
 cloudinary.json
 cloudinary-config.json
-
-# Clerk (if storing credentials locally)
 clerk.json
 clerk-config.json
 
-# Security
+# Security/SSL
 *.pem
 *.key
 *.crt
@@ -212,3 +181,6 @@ bun.lockb
 # Local development
 .local/
 local/
+
+# User uploads
+# (All uploads are stored in Cloudinary; no local uploads directory)
