--- a/package.json
+++ b/package.json
@@ -6,24 +6,30 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "test:r2": "node scripts/test-r2-config.js"
+    "lint": "next lint"
   },
   "dependencies": {
-    "@aws-sdk/client-s3": "3.374.0",
-    "@aws-sdk/protocol-http": "3.374.0",
-    "@aws-sdk/s3-request-presigner": "3.374.0",
+    "@aws-sdk/client-s3": "3.427.0",
+    "@aws-sdk/s3-request-presigner": "3.427.0",
     "@clerk/nextjs": "^6.31.6",
     "@fortawesome/fontawesome-free": "6.4.2",
     "@smithy/hash-node": "2.0.14",
     "cloudinary": "^2.7.0",
     "dotenv": "16.3.1",
     "next": "^15.5.2",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "swr": "^2.3.6",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.28.3",
+    "@babel/preset-env": "^7.28.3",
+    "@babel/preset-react": "^7.27.1",
     "autoprefixer": "^10.4.18",
+    "eslint": "8.57.1",
+    "eslint-config-next": "^15.5.2",
+    "node-fetch": "^3.3.2",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1"
   }
